# dxvk

./: .gitignore  meson.build  meson_options.txt  setup-ninja-clang-cl-debug-win32.bat  setup-ninja-clang-cl-debug.bat  setup-ninja-clang-cl-debugoptimized-win32.bat  setup-ninja-clang-cl-debugoptimized.bat  setup-ninja-clang-cl-release-win32.bat  setup-ninja-clang-cl-release.bat  setup-vs-clang-cl-debug.bat  setup-vs-clang-cl-debugoptimized.bat  setup-vs-clang-cl-release.bat  win32.txt
src/d3d11/: d3d11_buffer.cpp  d3d11_buffer.h  d3d11_context.cpp  d3d11_context_def.cpp  d3d11_context_imm.cpp  d3d11_device.cpp  d3d11_device.h  d3d11_shader.cpp  d3d11_swapchain.cpp  d3d11_texture.cpp  d3d11_texture.h  d3d11_view_uav.cpp  meson.build
src/dxbc/: dxbc_compiler.cpp
src/dxgi/: dxgi_interfaces.h
src/dxvk/: dxvk_adapter.cpp  dxvk_buffer.cpp  dxvk_buffer.h  dxvk_cmdlist.h  dxvk_context.cpp  dxvk_context.h  dxvk_device.cpp  dxvk_device.h  dxvk_device_info.cpp  dxvk_device_info.h  dxvk_extensions.h  dxvk_image.cpp  dxvk_image.h  dxvk_presenter.cpp  dxvk_staging.cpp  dxvk_swapchain_blitter.cpp  dxvk_unbound.cpp
src/dxvk/hud/: dxvk_hud_renderer.cpp  dxvk_hud_renderer.h
src/util/: util_math.h  util_shared_res.cpp
src/util/log/: log.cpp
src/vulkan/: meson.build  vulkan_loader.cpp  vulkan_loader.h
src/wsi/win32/: wsi_window_win32.cpp
